# devenv-django

./: README.md  devenv.nix  pyproject.toml
myapp/: models.py  urls.py  views.py
myapp/migrations/: 0001_initial.py  0002_choice_last_vote.py
myapp/templates/polls/: index.html  question.html  results.html
myproject/: settings.py  urls.py
