[tool.poetry]
name = "myproject"
version = "0.1.0"
description = ""
authors = ["Rowan Molony <rowan.molony@mainstreamrp.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.2.6"
django-environ = "^0.9.0"
PyMySQL = "^1.1.0"
cryptography = "^41.0.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
